client/static/css/style.css
*{
	margin: 0;
	padding: 0;
}
body{
	background-color: #dcdcdc;
	font-family: courier, arial, georgia;
}
#header{
	padding-bottom: 0;
	vertical-align: bottom;
	background-color: #0a0e16;
	background-image: url('../images/keyboard7cp.jpg');
	background-repeat: no-repeat;
	background-position: 0 40px;
	background-size: 125% auto;
	border-bottom: 1px solid silver;
}
#title{
	color: #fff;
	text-align: center;
	font-family:Georgia, serif;
	-webkit-text-stroke: 3px #edeeed;
	padding-top: 8%;
	margin-left: 10px;
	/*text-align: left;*/
	font-size: 2em;
	padding-bottom: 40px;
}
.top{
	width: 100%;
	height: 120px;
}
.float_right{
	position: fixed;
	width: 100%; 
	background-color: #000;
	height: 60px;
}
#links{
	text-align: right;
	list-style-type: none;
	z-index: 3;
	margin-bottom: 7px;
	padding: 30px 0 0 0;
	margin: 0;
}
#links li{
	display: inline-block;
}
#links a{
	color: #fff;
	text-decoration: none;
	padding-bottom: 10px;
	text-align: right;
}
#links li:hover{
	color: #676767;
}
#links>li>a>img{
	border:1px solid #000;
	border-radius: 50px;
}
#links>li>a>img{
	border-radius: 50px solid #fff;
}
.float_left{
	width: 45%;
	z-index: 300;
}
#nav{
	z-index: 3;
	position: fixed;
	padding-top: 40px;
	color: #99ccff;
	padding-left: 30px;
	display: flex;
	padding: 5px;
	margin-bottom: 15px;
}
#nav li {
	border-radius: 4px;
	background-color: #edeeed;
	color: #000;
	margin: 0 5px ;
	padding: 0 5px;
	display: inline-block;
	font-size: 1.2em;
	color: #000;
}
#nav li:first-child{
	color: #000;
}
#nav li:hover{
	color: #676767;
}
.right_nav{
	border-radius: 4px;
	background-color: #edeeed;
	color: #000;
	margin: 0 1px ;
	padding: 0 10px;
	vertical-align: top;
}
#personal_info, #education_info, #aspirations_info{
	background-image: url('../images/monitor.png');
	background-size: 50%;
	background-repeat: repeat;
	background-color: #dcdcdc;
	color: #000;
	padding: 0 35px 45px;
	border-top: 2px solid #333;
	border-top: 2px solid #2935b5;
	border-bottom: 2px solid #333;
}
#personal_info p, #education_info p, #aspirations_info p{
	padding-bottom: 20px;
}
/*#personal_info h3, #education_info h3, #aspirations_info h3{
	color: #2935b5;
	padding-bottom: 30px;
	text-align:center;
	font-family: courier,Georgia,serif;
}*/
.skillset{
	color: #23a4b2;
}
#spacer{
	height: 80px;
	text-align: center;
	padding: 20px 3% 10px;
	background-color: #0f131f;
	color: #cbcbcb;
	background: red; /* For browsers that do not support gradients */
    background: -webkit-linear-gradient(#0f131f, #bbb); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(#0f131f, #bbb); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(#0f131f, #bbb); /* For Firefox 3.6 to 15 */
    background: linear-gradient(#0f131f, #bbb); /* Standard syntax */
}
#spacer p{
	font-family: courier,Helvetica, arial;
	font-size: .9em;
}
#spacer a{
	display: none;
}
.large{
	font-size: 1.4em;
}
.medium{
	font-size: 1.2em;
}
.warmth>a{
	color: #ff1a1a;
	display: none;
}

.video{
	border-top: 2px solid #434343;
	border-top: 2px solid #2935b5;
	height: 550px;
	font-size: .8em;
	text-align: center;
	width: 100%;
	margin: 0;
	padding: 0;
}
.video:nth-child(odd){
	border-top: 2px solid #99ccff;
}
.p{
	height: 130px;
	padding: 25px 20px 0;
	color: white;
	font-size: 1.5em;
}
.left, .right{
	width: 99%;
	float: none;
	padding: 0;
	margin: 0;
	clear: both;
}
#ruby>.left{
	height: 355px;
}
.right{
	height: 355px;
}
.iframe{
	width:100%;
	border:2px solid #333;
	background-color: #333;
}
#python{
	background-image: url('../images/data-facev1.jpg');
	background-size: 50%;
}

.left_title{ 
	color: #2935b5; 
	text-align: center;
	padding: 20px 0 10px;
	font-size: 1.9em;
}

#ruby{
	background-image: url('../images/mouse.png');
	background-size: 25%;

}
#ruby>.right>p{
	color: #000;
}
#mean{
	background-image: url('../images/numbersphereB&Wv1.png');
	background-size: 15%;
}
#nowgoal, #latergoal{
	display: inline-block;
	width: 45%;
	vertical-align: top;
	margin-left: 10px;
}
#footer p{
	text-align: center;
	padding: 10px 0 20px;
	color: #ababab;
	background-color: #434343;
}




@media screen and (max-width: 880px) and (min-width:540px){
	#header{
		background-size: 100%;
	}
	#links>li>a>img{
		width: 50px;
	}
	.top{
		height: 200px;
	}
	#title{
		font-size: 2.5em;
		text-align: center;
		background: rgba(255, 255, 255, .2);
		margin: 0 0 100px;
		padding: 0;
		-webkit-text-stroke: 1px #000;
	}
	#spacer{
		height:70px;
	}
	.video{
		height: 500px;
	}
	.left_title{
		font-size: 2em;
	}
	.iframe{
		width: 75%;
	}
	#nowgoal{
		margin-left: 20px;
	}
}

@media screen and (min-width: 880px) and (max-width: 1080px){
	#header{
		background-size: 100%;
	}
	.top{
		height: 300px;
	}
	#title{
		font-size: 2.5em;
		background: rgba(255, 255, 255, .2);
		margin: 0 0 100px;
		text-align: center;
		padding: 0;
		-webkit-text-stroke: 1px #000;
	}
	#links>li>a>img{
		width: 60px;
	}
	#spacer{
		height:60px;
		font-size: 1.1em;
	}
	.video{
		height: 500px;
	}
	.left_title{
		font-size: 2em;
	}
	.iframe{
		width: 65%;
	}
	#nowgoal, #latergoal{
		margin-left: 20px;
	}
}

@media screen and  (min-width: 1080px){

	#header{
		background-size: 80%;
		background-position: center;
	}
	#links>li>a>img{
		width: 70px;
	}
	#nav{
		margin: 35px 0 0 40px;
	}
	#nav>li{
		background:rgba(255, 255, 255, .0);
		margin-left: 30px; 
	}
	#nav>li:nth-child(2){
		color: #676767;
	}
	#nav>li:last-child{
		color: #898989;
	}
	.top{
		height: 300px;
	}
	#title{
		font-size: 3.5em;
		background: rgba(255, 255, 255, 0.2);
		margin: 0 0 250px;
		text-align: center;
		padding: 0;
		-webkit-text-stroke: 1px #000;
	}
	#spacer{
		height:70px;
		font-size: 1.2em;
	}
	#triangle-topleft-1 {
		z-index: 2;
		position: fixed;
		width: 4px;
		height: 0;
		border-top: 100px solid #edeeed;
		border-right: 500px solid transparent;
		border-left: 100px solid transparent;
	}
	#triangle-topleft{
		z-index: 1;
		position: fixed;
		width: 4px;
		border-top: 100px solid #99ccff;
		border-right: 360px solid transparent;
		border-left: 300px solid transparent;
	}
	.video{
		height: 400px;
	}
	.iframe{
		width: 92%;
		margin: 0 20px;
	}
	.p{
		width: 92%;
		padding: 0;
		margin: 70px 4% 0;
		font-size: 2em;
	}
	.left_title{
		font-size: 2em;
	}
	.right{
		width: 47%;
		float: right;
		clear: none;
	}
	.left{
		width: 47%;
		float: left;
		clear: none;	
	}
	#nowgoal, #latergoal{
		width: 28%;
		padding-left: 300px;
	}
	#nowgoal{
		padding-left: 100px;
	}
}

